# sonar-badge-displayer

./: .env.example  Cargo.toml  Dockerfile  README.md  config.example.yaml  cspell.json  docker-compose.yml
.github/workflows/: ci.yml
src/: main.rs
src/api/: mod.rs  project_badges.rs
src/env/: config.rs  env.rs  mod.rs  state.rs
src/routes/: index.rs  mod.rs
src/utils/: http.rs
