[package]
name = "sonar_badge_displayer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.22"
reqwest = "0.12.5"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
